added sass styling + bem methodology for contact and menu in header section

--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
           <a class="logo" href="index.html" title="Strona główna">
             Web<span class="logo logo--black">Studio</span></a
           >
-          <ul class="menu-list">
-            <li class="menu-item">
-              <a class="menu-link is-active" href="./index.html">Agencja</a>
+          <ul class="menu">
+            <li class="menu__item"><a class="menu__link is-active" href="./index.html">Agencja</a></li>
+            <li class="menu__item">
+              <a class="menu__link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="./portfolio.html">Portfolio</a></li>
-            <li class="menu-item"><a class="menu-link" href="#">Kontakt</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Kontakt</a></li>
           </ul>
         </nav>
-        <div class="contact-list">
-          <a class="contact-link" href="mailto:info@devstudio.com">
+        <div class="contact">
+          <a class="contact__link" href="mailto:info@devstudio.com">
             <svg width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
           </a>
-          <a class="contact-link" href="tel:+48111111111">
+          <a class="contact__link" href="tel:+48111111111">
             <svg width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
-            +48 111 111 111</a
+            +48 111 111 111</a
           >
         </div>
       </div>
@@ -443,8 +443,7 @@
           </label>
           <label class="modal__checkbox">
             <span class="modal__checkboxtext"
-              >Oświadczam iż akceptuję
-              <a href="#" class="modal__link">Regulamin</a> i
+              >Oświadczam iż akceptuję <a href="#" class="modal__link">Regulamin</a> i
               <a href="#" class="modal__link">Politykę Prywatności</a>.</span
             >
             <input
