--- a/portfolio.html
+++ b/portfolio.html
@@ -21,26 +21,26 @@
           <a class="logo" href="index.html" title="Strona główna">
             Web<span class="logo logo--black">Studio</span></a
           >
-          <ul class="menu-list">
-            <li class="menu-item"><a class="menu-link" href="./index.html">Agencja</a></li>
-            <li class="menu-item">
-              <a class="menu-link is-active" href="./portfolio.html">Portfolio</a>
+          <ul class="menu">
+            <li class="menu__item"><a class="menu__link" href="./index.html">Agencja</a></li>
+            <li class="menu__item">
+              <a class="menu__link is-active" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="#">Kontakt</a></li>
+            <li class="menu__item"><a class="menu__link" href="#">Kontakt</a></li>
           </ul>
         </nav>
-        <div class="contact-list">
-          <a class="contact-link" href="mailto:info@devstudio.com">
+        <div class="contact">
+          <a class="contact__link" href="mailto:info@devstudio.com">
             <svg width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
           </a>
-          <a class="contact-link" href="tel:+48111111111">
+          <a class="contact__link" href="tel:+48111111111">
             <svg width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
-            +48 111 111 111</a
+            +48 111 111 111</a
           >
         </div>
       </div>
@@ -324,7 +324,13 @@
           <h4 class="newsletter__tittle">Zapisz się do newslettera</h4>
           <form action="" name="newsletter-form">
             <label for="">
-              <input type="email" name="email" id="email" placeholder="E-mail" class="newsletter__input" />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+                class="newsletter__input"
+              />
               <button type="submit" class="button newsletter__button">
                 <span>Zapisz się</span>
                 <svg width="24" height="24">
