fix 2: styling corrections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             Web<span class="logo logo--black">Studio</span></a
           >
           <ul class="menu">
-            <li class="menu__item"><a class="menu__link is-active" href="./index.html">Agencja</a></li>
+            <li class="menu__item">
+              <a class="menu__link is-active" href="./index.html">Agencja</a>
+            </li>
             <li class="menu__item">
               <a class="menu__link" href="./portfolio.html">Portfolio</a>
             </li>
@@ -66,7 +68,7 @@
         <div class="container">
           <div class="advantages">
             <ul class="advantages__list">
-              <li class="advantages__item">
+              <li>
                 <div class="advantages__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-antenna"></use>
@@ -78,7 +80,7 @@
                   sodales ui. Interdum et malesuada
                 </p>
               </li>
-              <li class="advantage-item">
+              <li>
                 <div class="advantages__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-clock"></use>
@@ -90,7 +92,7 @@
                   sodales ui. Interdum et malesuada
                 </p>
               </li>
-              <li class="advantage-item">
+              <li>
                 <div class="advantages__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-diagram"></use>
@@ -102,7 +104,7 @@
                   sodales ui. Interdum et malesuada
                 </p>
               </li>
-              <li class="advantage-item">
+              <li>
                 <div class="advantages__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-astronaut"></use>
