--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="section hero">
         <div class="container">
           <h1 class="hero__title">Efektywne rozwiązania dla waszego biznesu</h1>
-          <button type="button" class="button hero-btn" data-modal-open>Zamów usługę</button>
+          <button type="button" class="button" data-modal-open>Zamów usługę</button>
         </div>
       </section>
       <!-- /HERO -->
